syntax = "proto3";

option csharp_namespace = "PlatformService";

service PlatformServiceGrpc{
  rpc GetAllPlatforms (GetAllRequest) returns (PlatformResponse);
}

message GetAllRequest {}

message GrpcPlatformModel {
  int32 id = 1;
  string name = 2;
  string  publisher = 3;
}

message PlatformResponse {
  repeated GrpcPlatformModel platforms = 1;
}

